Fix more broken css

--- a/app/assets/stylesheets/etalage.css
+++ b/app/assets/stylesheets/etalage.css
@@ -88,7 +88,14 @@
  }
 .etalage, .etalage ul, .etalage li, .etalage img, .etalage_hint, .etalage_icon, .etalage_description{ margin:0; padding:0; border:0; list-style:none }
 .etalage, .etalage_magnifier div, .etalage_magnifier div img, .etalage_small_thumbs ul, ul .etalage_small_thumbs li, .etalage_zoom_area div, .etalage_zoom_img{ position:relative }
-.etalage img, .etalage li{ -webkit-user-select:none; -khtml-user-select:none; -moz-user-select:none; -o-user-select:none; user-select:none; -webkit-user-drag:none; -moz-user-drag:none; user-drag:none }
+.etalage img, .etalage li{
+	-webkit-user-select:none;
+	-khtml-user-select:none;
+	-moz-user-select:none;
+	-o-user-select:none;
+	-webkit-user-drag:none;
+	-moz-user-drag:none;
+}
 .etalage, .etalage_small_thumbs li{ float:left }
 .etalage_small_thumbs li img{
 	width:60px !important;
